# django-sorcery

./: .dockerignore  .gitchangelog.rc  .gitignore  .importanizerc  .pre-commit-config.yaml  .sourcery.yaml  .style.yapf  .travis.yml  AUTHORS.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
django_sorcery/: __init__.py  __version__.py  compat.py  exceptions.py  field_mapping.py  fields.py  forms.py  formsets.py  pytest_plugin.py  routers.py  shortcuts.py  testing.py  utils.py  validators.py
django_sorcery/admin/: __init__.py  options.py  views.py
django_sorcery/db/: __init__.py  composites.py  fields.py  meta.py  middleware.py  mixins.py  models.py  profiler.py  query.py  relations.py  session.py  signals.py  sqlalchemy.py  strategy_options.py  transaction.py  url.py  utils.py
django_sorcery/formsets/: __init__.py  base.py  inline.py
django_sorcery/management/: __init__.py  alembic.py  base.py
django_sorcery/validators/: __init__.py  base.py  runner.py
django_sorcery/views/: __init__.py  base.py  detail.py  edit.py  list.py
django_sorcery/viewsets/: __init__.py  base.py  mixins.py
docs/: Makefile  api.rst  conf.py  index.rst  reqs.txt
docs/api/: django_sorcery.compat.rst  django_sorcery.db.alembic.base.rst  django_sorcery.db.alembic.rst  django_sorcery.db.alembic.signals.rst  django_sorcery.db.composites.rst  django_sorcery.db.fields.rst  django_sorcery.db.meta.base.rst  django_sorcery.db.meta.column.rst  django_sorcery.db.meta.composite.rst  django_sorcery.db.meta.model.rst  django_sorcery.db.meta.relations.rst  django_sorcery.db.meta.rst  django_sorcery.db.middleware.rst  django_sorcery.db.mixins.rst  django_sorcery.db.models.rst  django_sorcery.db.profiler.rst  django_sorcery.db.query.rst  django_sorcery.db.relations.rst  django_sorcery.db.rst  django_sorcery.db.session.rst  django_sorcery.db.signals.rst  django_sorcery.db.sqlalchemy.rst  django_sorcery.db.transaction.rst  django_sorcery.db.url.rst  django_sorcery.db.utils.rst  django_sorcery.exceptions.rst  django_sorcery.field_mapping.rst  django_sorcery.fields.rst  django_sorcery.forms.rst  django_sorcery.formsets.base.rst  django_sorcery.formsets.inline.rst  django_sorcery.formsets.rst  django_sorcery.management.alembic.rst  django_sorcery.management.base.rst  django_sorcery.management.commands.rst  django_sorcery.management.commands.sorcery.rst  django_sorcery.management.commands.sorcery_createall.rst  django_sorcery.management.commands.sorcery_current.rst  django_sorcery.management.commands.sorcery_downgrade.rst  django_sorcery.management.commands.sorcery_dropall.rst  (+24 more)
test_site/: manage.py
test_site/polls/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
test_site/test_site/: apps.py  settings.py  urls.py  wsgi.py
tests/: __init__.py  apps.py  appviews.py  base.py  models.py  models_backpop.py  models_multidb.py  models_order.py  models_terrible_relations.py  settings.py  test_compat.py  test_exceptions.py  test_field_mapping.py  test_fields.py  test_forms.py  test_formsets.py  test_pytest_plugin.py  test_routers.py  test_shortcuts.py  test_utils.py  test_validators.py  urls.py
(+85 files in other folders)
